--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "activityBar.background": "#4D154D",
     "titleBar.activeBackground": "#6C1E6C",
     "titleBar.activeForeground": "#FDF8FD"
-  }
+  },
+  "cSpell.words": ["Vasariste"]
 }
